// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Ripe's track destination action: all fields 1`] = `
Object {
  "anonymousId": "f6t8rQsKdU^N",
  "context": Object {
    "groupId": "f6t8rQsKdU^N",
  },
  "event": "f6t8rQsKdU^N",
  "messageId": Any<String>,
  "name": "f6t8rQsKdU^N",
  "properties": Object {
    "testType": "f6t8rQsKdU^N",
  },
  "timestamp": Any<String>,
  "userId": "f6t8rQsKdU^N",
}
`;

exports[`Testing snapshot for Ripe's track destination action: required fields 1`] = `
Object {
  "anonymousId": "anonId1234",
  "context": Object {},
  "event": "f6t8rQsKdU^N",
  "messageId": Any<String>,
  "name": "f6t8rQsKdU^N",
  "properties": Object {
    "event": "f6t8rQsKdU^N",
  },
  "timestamp": Any<String>,
  "userId": "user1234",
}
`;
